--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@firebase/database": "^0.4.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
@@ -18,6 +19,7 @@
     "lodash": "^4.17.11",
     "npm": "^6.9.0",
     "vue": "^2.6.10",
+    "vue-gettext": "^2.1.5",
     "vue-glide-js": "^1.3.12",
     "vue-router": "^3.0.1",
     "vue-spinner": "^1.0.3"
