--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "imagetracerjs": "^1.2.5",
     "lodash": "^4.17.11",
     "npm": "^6.9.0",
+    "numeral": "^2.0.6",
     "vue": "^2.6.10",
     "vue-gettext": "^2.1.5",
     "vue-glide-js": "^1.3.12",
